--- a/Automata.cabal
+++ b/Automata.cabal
@@ -57,7 +57,7 @@ executable Automata
   -- other-extensions:    
   
   -- Other library packages from which modules are imported.
-  build-depends:       base >=4.7 && <4.8,comonad
+  build-depends:       base >=4.7 && <4.8, comonad >4.0
   
   -- Directories containing source files.
   -- hs-source-dirs:      
