--- a/Automata.cabal
+++ b/Automata.cabal
@@ -57,7 +57,7 @@ executable Automata
   -- other-extensions:    
   
   -- Other library packages from which modules are imported.
-  build-depends:       base >=4.7 && <4.8, comonad >=4.0, random >=1.0.0, containers
+  build-depends:       base >=4.7 && <4.8, comonad >=4.0, random >=1.0.0, containers >= 0.5.5, JuicyPixels >= 3.1.7
   
   -- Directories containing source files.
   -- hs-source-dirs:      
