--- a/Automata.cabal
+++ b/Automata.cabal
@@ -61,7 +61,7 @@ executable Automata
                        random >=1.0.0, containers >= 0.5.5, JuicyPixels >= 3.1.7
   
   -- Directories containing source files.
-  -- hs-source-dirs:      
+  hs-source-dirs:      src
   
   -- Base language which the package is written in.
   default-language:    Haskell2010
