--- a/Automata.cabal
+++ b/Automata.cabal
@@ -58,7 +58,8 @@ executable Automata
   
   -- Other library packages from which modules are imported.
   build-depends:       array >=0.5, base >=4.7 && <4.8, comonad >=4.0,
-                       random >=1.0.0, containers >= 0.5.5, JuicyPixels >= 3.1.7
+                       random >=1.0.0, containers >= 0.5.5, JuicyPixels >=3.1.7,
+                       gloss ==1.9.2.*, gloss-juicy
   
   -- Directories containing source files.
   hs-source-dirs:      src
